--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     7. <span class="dord" data-dord-type="freedom">freedoming</span><br>
 
 
-    Example: This is my website. I am trying to make this <span class="dord" data-dord-type="explode">point</span>
-    explode.
+    Example: This is my <span class="dord" data-dord-type="freedom">website</span>. I am trying to make this <span class="dord" data-dord-type="explode">point</span>
+    <span class="dord" data-dord-type="art">explode</span>.
 
     <script>
         function insertCanvi() {
