support custom html tags. make slam, squeeze, pulse

--- a/index.html
+++ b/index.html
@@ -5,24 +5,26 @@
 </head>
 
 <body style="font-size:3em; font-family: Arial">
-    <span class="dord" data-dord-type="art">Dord.js</span> is a library for words
+    <art>Dord.js is a library for</art><wiggle> words</wiggle>
     <br>
-    1. <span class="dord" data-dord-type="vanilla">vanilla</span> <br>
-    2. <span class="dord" data-dord-type="shrink">shrinking</span> <br>
-    3. <span class="dord" data-dord-type="grow">growing</span> <br>
-    4. <span class="dord" data-dord-type="explode">exploding</span><br>
-    5. <span class="dord" data-dord-type="curve">currrrrrrvvvingggg</span><br>
-    6. <span class="dord" data-dord-type="spin">tumbling</span><br>
-    7. <span class="dord" data-dord-type="art">arting</span><br>
-    8. <span class="dord" data-dord-type="freedom">freedoming</span><br>
-    9. <span class="dord" data-dord-type="punch">punching</span><br>
-    10. <span class="dord" data-dord-type="wiggle">wiggling</span><br>
-    11. <span class="dord" data-dord-type="surprise">surprising</span><br>
+    1. <vanilla>vanilla</vanilla> <br>
+    2. <shrink>shrinking</shrink> <br>
+    3. <grow>growing</grow> <br>
+    4. <explode>exploding</explode><br>
+    5. <curve>currrrrrrvvvingggg</curve><br>
+    6. <spin>tumbling</spin><br>
+    7. <art>arting</art><br>
+    8. <freedom>freedoming</freedom><br>
+    9. <punch>punching</punch><br>
+    10. <wiggle>wiggling</wiggle><br>
+    11. <surprise>surprising</surprise><br>
+    12. <slam>slamming</slam><br>
+    13. <squeeze>squeezing</squeeze><br>
+    14. <pulse>pulsing</pulse><br>
 
-
-    <span class="dord" data-dord-type="surprise">Example:</span> This is my <span class="dord" data-dord-type="freedom">website</span>.
-    I am <span class="dord" data-dord-type="wiggle">trying</span> to make this <span class="dord" data-dord-type="explode">point</span>
-    <span class="dord" data-dord-type="art">explode</span>.
+    <surprise>Example:</surprise> This is my <freedom>website</freedom>.
+    I am <wiggle>trying</wiggle> to <slam>make</slam> this <explode>point</explode>
+    <art>explode</art>.
 
     <script src="dord.js">
         
