--- a/index.html
+++ b/index.html
@@ -21,10 +21,11 @@
     12. <slam>slamming</slam><br>
     13. <squeeze>squeezing</squeeze><br>
     14. <pulse>pulsing</pulse><br>
+    15. <goodbye>goodbyeing</goodbye><br>
 
     <surprise>Example:</surprise> This is my <freedom>website</freedom>.
     I am <wiggle>trying</wiggle> to <slam>make</slam> this <explode>point</explode>
-    <art>explode</art>.
+    <art>explode</art>. <goodbye>Thanks for visiting</goodbye>
 
     <script src="dord.js">
         
