--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
 
 </head>
 
-<body style="font-size:3em; font-family: Arial">
-    <art>Dord.js is a library for</art><wiggle> words</wiggle>
+<body style="font-size:3em; font-family: Arial; background: lightcyan">
+    <h1><art>Dord.js</art></h1>
+
+    <surprise>Welcome!</surprise> <art>Dord.js</art> is a <cross>library</cross> <freedom>hyper text experience</freedom> for words.
+    <br><br>
+    
+    <wiggle>r e l a x</wiggle> <a href="https://github.com/jjkaufman/dord.js" target="blank"><wiggle> https://github.com/jjkaufman/dord.js </wiggle></a>
+    <br>
     <br>
     1. <vanilla>vanilla</vanilla> <br>
     2. <shrink>shrinking</shrink> <br>
@@ -22,10 +28,9 @@
     13. <squeeze>squeezing</squeeze><br>
     14. <pulse>pulsing</pulse><br>
     15. <goodbye>goodbyeing</goodbye><br>
+    16. <cross>crossing</cross><br>
 
-    <surprise>Example:</surprise> This is my <freedom>website</freedom>.
-    I am <wiggle>trying</wiggle> to <slam>make</slam> this <explode>point</explode>
-    <art>explode</art>. <goodbye>Thanks for visiting</goodbye>
+    <surprise>Wow!</surprise> <art>You</art> are still here. 
 
     <script src="dord.js">
         
