--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
+<!DOCTYPE html>
 <html>
 
 <head>
-
+    <meta charset="utf-8">
 </head>
 
 <body style="font-size:3em; font-family: Arial; background: lightcyan">
@@ -9,7 +10,7 @@
 
     <surprise>Welcome!</surprise> <art>Dord.js</art> is a <cross>library</cross> <freedom>hyper text experience</freedom> for words.
     <br><br>
-    
+
     <wiggle>r e l a x</wiggle> <a href="https://github.com/jjkaufman/dord.js" target="blank"><wiggle> https://github.com/jjkaufman/dord.js </wiggle></a>
     <br>
     <br>
@@ -29,6 +30,7 @@
     14. <pulse>pulsing</pulse><br>
     15. <goodbye>goodbyeing</goodbye><br>
     16. <cross>crossing</cross><br>
+    17. <luck>get lucky</luck><br>
 
     <surprise>Wow!</surprise> <art>You</art> are still here. 
 
