implement ding, fill, spill, subwoofer, and spotlight

--- a/index.html
+++ b/index.html
@@ -31,8 +31,19 @@
     15. <goodbye>goodbyeing</goodbye><br>
     16. <cross>crossing</cross><br>
     17. <luck>get lucky</luck><br>
+    18. <ding>warning</ding><br>
+    18. <fill>California Hotel & Casino</fill><br>
+    19. <spill>Gambling</spill><br>
+    20. <subwoofer>boom boom boom</subwoofer><br>
+    21. <spotlight>searching</spotlight><br>
 
-    <surprise>Wow!</surprise> <art>You</art> are still here. 
+    <surprise>Wow!</surprise> <art>You</art> are still here. <br>
+    <br><br><br>
+
+    <fill>California Hotel & Casino</fill><br>
+    <cross style="font-size: .8em">smiling</cross>&nbsp;&nbsp;&nbsp;<spill>Gambling</spill>&nbsp;&nbsp;&nbsp;<cross style="font-size: .8em">smiling</cross><br>
+    <subwoofer>Happy Birthday Mr. Tiesto</subwoofer><br>
+    <luck>$$$$$$$</luck>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<ding>Sailor Jerry</ding><br>
 
     <script src="dord.js">
         
