--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     19. <spill>Gambling</spill><br>
     20. <subwoofer>boom boom boom</subwoofer><br>
     21. <spotlight>searching</spotlight><br>
+    22. <fire>&nbsp;spicy</fire><br>
 
     <surprise>Wow!</surprise> <art>You</art> are still here. <br>
     <br><br><br>
