--- a/index.html
+++ b/index.html
@@ -5,44 +5,57 @@
     <meta charset="utf-8">
 </head>
 
-<body style="font-size:3em; font-family: Arial; background: lightcyan">
-    <h1><art>Dord.js</art></h1>
+<body style="font-family: Arial; background: lightcyan">
+    <div style="font-size:1.5em;">
+            <h1>
+        <art>Dord.js</art>
+    </h1>
 
-    <surprise>Welcome!</surprise> <art>Dord.js</art> is a <cross>library</cross> <freedom>hyper text experience</freedom> for words.
+    <surprise>Welcome!</surprise>
+    <art>Dord.js</art> is a <cross>library</cross>
+    <freedom>hyper text experience</freedom> for words.
     <br><br>
 
-    <wiggle>r e l a x</wiggle> <a href="https://github.com/jjkaufman/dord.js" target="blank"><wiggle> https://github.com/jjkaufman/dord.js </wiggle></a>
-    <br>
-    <br>
-    1. <vanilla>vanilla</vanilla> <br>
-    2. <shrink>shrinking</shrink> <br>
-    3. <grow>growing</grow> <br>
-    4. <explode>exploding</explode><br>
-    5. <curve>currrrrrrvvvingggg</curve><br>
-    6. <spin>tumbling</spin><br>
-    7. <art>arting</art><br>
-    8. <freedom>freedoming</freedom><br>
-    9. <punch>punching</punch><br>
-    10. <wiggle>wiggling</wiggle><br>
-    11. <surprise>surprising</surprise><br>
-    12. <slam>slamming</slam><br>
-    13. <squeeze>squeezing</squeeze><br>
-    14. <pulse>pulsing</pulse><br>
-    15. <goodbye>goodbyeing</goodbye><br>
-    16. <cross>crossing</cross><br>
-    17. <luck>get lucky</luck><br>
-    18. <ding>warning</ding><br>
-    18. <fill>California Hotel & Casino</fill><br>
-    19. <spill>Gambling</spill><br>
-    20. <subwoofer>boom boom boom</subwoofer><br>
-    21. <spotlight>searching</spotlight><br>
-    22. <fire>&nbsp;spicy</fire><br>
+    <wiggle>r e l a x</wiggle> <a href="https://github.com/jjkaufman/dord.js" target="blank">
+        <wiggle> https://github.com/jjkaufman/dord.js </wiggle>
+    </a></div>
 
-    <surprise>Wow!</surprise> <art>You</art> are still here. <br>
-    <br><br><br>
+    <br>
+
+    <ul style=" column-width:5em; font-size:3em; width: 100%;list-style-type:none">
+        <li><art>art</art></li>
+        <li><freedom>freedom</freedom></li>
+        <li><punch>punch</punch></li>
+        <li><wiggle>wiggle</wiggle></li>
+        <li><surprise>surprise</surprise></li>
+        <li><slam>slam</slam></li>
+        <li><cross>cross</cross></li>
+        <li><luck>luck</luck></li>
+        <li><fire>&nbsp;fire</fire></li>
+        <li><ding>ding</ding></li>
+        <li><fill>fill</fill> </li>
+        <li><spill>spill</spill></li>
+        <li><subwoofer>subwoofer</subwoofer></li>
+        <li><spotlight>spotlight</spotlight></li>
+        <li><squeeze>squeeze</squeeze></li>
+        <li><pulse>pulse</pulse></li>
+        <li><goodbye>goodbye</goodbye></li>
+
+        <!-- <li><vanilla>vanilla</vanilla></li>
+        <li><shrink>shrinking</shrink></li>
+        <li><grow>growing</grow></li>
+        <li><explode>exploding</explode></li>
+        <li><curve>currrrrrrvvvingggg</curve></li>
+        <li><spin>tumbling</spin></li> -->
+    </ol>
+    <br>
+<!-- 
+    <surprise>Wow!</surprise>
+    <art>You</art> are still here. <br> -->
+
 
     <script src="dord.js">
-        
+
     </script>
 </body>
 
