switch focus to neon

--- a/index.html
+++ b/index.html
@@ -126,6 +126,9 @@
         <li>
             <goodbye>goodbye</goodbye>
         </li>
+        <li>
+                <neon>neon</neon>
+            </li>
       
         <li>
                 <art>art</art>
