--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
 <body style="font-family: Arial; background: lightcyan;">
     <div style="font-size:1.5em;">
         <h1>
-            <art>Dord.js</art>
+            <art>Modern</art><art>Word</art><art>Solutions</art>
         </h1>
 
         <surprise>Welcome!</surprise>
-        <art>Dord.js</art> is a <cross>library</cross>
+        <art>ModernWordSolutions.js</art> is a <cross>library</cross>   
         <freedom>hyper text experience</freedom> for words.
         <br><br>
         <a class="bmc-button" target="_blank" href="https://www.buymeacoffee.com/JUARtBs4o">
@@ -68,7 +68,7 @@
             Buy me a coffee
         </a>
         <div>
-            <wiggle>r e l a x</wiggle> <a href="https://github.com/jjkaufman/dord.js" target="blank">
+            <a href="https://github.com/jjkaufman/dord.js" target="blank">
                 <wiggle> https://github.com/jjkaufman/dord.js</wiggle>
             </a>
         </div>
@@ -76,13 +76,13 @@
 
 
     <ul style=" column-width:8em; font-size:3em;list-style-type:none; ">
-        <li id="currentContainer" style="font-size:2.5em">
+        <!-- <li id="currentContainer" style="font-size:2.5em">
             <fill id ="current">fill</fill>
         </li>
         <li style="font-size:2.5em">
            <a href="#" onclick="changePage()"> <wiggle>next</wiggle></a>
-        </li>
-        <!-- <li>
+        </li> -->
+        <li>
             <wiggle>wiggle</wiggle>
         </li>
         <li>
@@ -93,12 +93,12 @@
         </li>
         <li>
             <surprise>surprise</surprise>
-        </li> -->
+        </li>
         
-        <!-- <li  style="font-size:3em">
+        <li  >
             <fire>&nbsp;fire</fire>
-        </li> -->
-        <!-- <li>
+        </li>
+         <li>
             <spill>spill</spill>
         </li>
         <li>
@@ -144,7 +144,7 @@
         </li>
         <li>
             <punch>punch</punch>
-        </li> -->
+        </li>
       
         </ol>
         <br> <br> <br> <br> <br>
